# TelegramBotEvaGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: e_losses.json  enemy_losses.json  enemy_losses.py  for_test.py  main.py  mongo_db.py  open_ai.py
